--- a/Chat/app/src/main/res/layout/activity_categorias.xml
+++ b/Chat/app/src/main/res/layout/activity_categorias.xml
@@ -4,18 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Chat.Salas">
-
+    tools:context=".Chat.Categorias">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/lista"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"/>
+        android:id="@+id/lista"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"/>
 
     </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
