--- a/Chat/app/src/main/res/layout/activity_chat_window.xml
+++ b/Chat/app/src/main/res/layout/activity_chat_window.xml
@@ -4,18 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Chat.Salas">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:id="@+id/lista"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"/>
-
-    </ScrollView>
+    tools:context=".Chat.ChatWindow">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
