--- a/Chat/app/src/main/res/layout/activity_chat_window.xml
+++ b/Chat/app/src/main/res/layout/activity_chat_window.xml
@@ -1,9 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Chat.ChatWindow">
+    <com.google.android.gms.ads.AdView
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/banner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center_horizontal"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/id_banner"></com.google.android.gms.ads.AdView>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:background="@color/colorPrimary"
+        android:layout_marginTop="50dp">
+        <TextView
+            android:id="@+id/titulo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chat"
+            android:textStyle=""
+            android:textSize="15dp"
+            android:textColor="#fff"
+            android:layout_gravity="center_vertical|center_horizontal"/>
+    </FrameLayout>
+    <ScrollView
+        android:id="@+id/scroll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="75dp"
+        android:layout_marginBottom="60dp"
+        android:background="@drawable/f_chat">
+
+
+
+        <LinearLayout
+            android:id="@+id/chat"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+        </LinearLayout>
+
+
+
+    </ScrollView>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/f_chat2"
+        android:layout_gravity="bottom">
+        <FrameLayout
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/input_chat"
+            android:layout_gravity="center_vertical"
+            android:minHeight="45dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:layout_marginLeft="15dp">
+
+
+            <EditText
+                android:id="@+id/mensaje"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical"
+                android:background="@color/transparente"/>
+
+
+
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical|right"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/boton_chat">
+            <!--<ImageView
+                android:id="@+id/grabar"
+                android:onClick="Enviar"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:src="@drawable/boton_grabar"/>-->
+            <ImageView
+                android:id="@+id/enviar"
+                android:onClick="Enviar"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:src="@drawable/ic_menu_send"/>
+        </FrameLayout>
+
+    </FrameLayout>
+
+
+</FrameLayout>
