--- a/Chat/app/src/main/res/layout/lista.xml
+++ b/Chat/app/src/main/res/layout/lista.xml
@@ -17,11 +17,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Titulo"
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="10dp"/>
 
-            />
+        <TextView
+            android:id="@+id/numero"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="15dp"/>
+
+
 
     </LinearLayout>
 
